force-app/main/default/objects/Fatura_Icerik__c/Fatura_Icerik__c.object-meta.xml
<CustomObject>
    <label>Fatura Icerik</label>
    <nameField>
        <label>Mal/Hizmet</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fatura Icerikleri</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>