force-app/main/default/objects/Fatura_Icerik__c/fields/Birim_Fiyati__c.field-meta.xml
<CustomField>
    <fullName>Birim_Fiyati__c</fullName>
    <label>Birim Fiyati</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>