force-app/main/default/objects/Fatura_Icerik__c/fields/Fatura__c.field-meta.xml
<CustomField>
    <fullName>Fatura__c</fullName>
    <label>Fatura</label>
    <referenceTo>Fatura__c</referenceTo>
    <relationshipLabel>Fatura Icerikleri</relationshipLabel>
    <relationshipName>Fatura_Icerikleri</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>