force-app/main/default/objects/Fatura_Icerik__c/fields/Musteri__c.field-meta.xml
<CustomField>
    <fullName>Musteri__c</fullName>
    <label>Musteri</label>
    <referenceTo>Musteri__c</referenceTo>
    <relationshipLabel>Fatura Icerikleri</relationshipLabel>
    <relationshipName>Fatura_Icerikleri</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>