force-app/main/default/objects/Fatura_Icerik__c/fields/Tutar__c.field-meta.xml
<CustomField>
    <fullName>Tutar__c</fullName>
    <formula>( Birim_Fiyati__c *  Miktar__c)+ ( Birim_Fiyati__c *  Miktar__c)*(VALUE(TEXT(KDV__c))/100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tutar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>